--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,11 @@ h2 {
   font-weight: 700;
   font-style: normal;
 }
+.date{
+  color: #66fcf1;
+  margin-top: 30px;
+
+}
 
 .strike-through:checked + p {
   text-decoration: line-through;
@@ -141,29 +146,11 @@ h2 {
   letter-spacing: 1px;
   color: rgb(34, 113, 106);
 }
-.list{
-  margin-left: 10px;
-  margin-top: 20px;
-  justify-content: space-between;
-  max-width:300px;
-    word-wrap:break-word;
-
-}
 
 .list{
   margin-left: 10px;
-  margin-top: 20px;
   justify-content: space-between;
+  margin-top: 5px;
   max-width:300px;
-    word-wrap:break-word;
-
-}
-
-.list{
-  margin-left: 10px;
-  margin-top: 20px;
-  justify-content: space-between;
-  max-width:300px;
-    word-wrap:break-word;
-
+  word-wrap:break-word;
 }
